fix safari alignment issue

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,16 +33,16 @@
 .text-right {
   text-align: right !important;
 }
-.fs-12 {
+.font-size-12 {
   font-size: 12px !important;
 }
-.fs-14 {
+.font-size-14 {
   font-size: 14px !important;
 }
-.fs-16 {
+.font-size-16 {
   font-size: 16px !important;
 }
-.fs-18 {
+.font-size-18 {
   font-size: 18px !important;
 }
 .fw-300 {
